crates/jrsonnet-formatter/src/snapshots/jrsonnet_formatter__tests__args.snap
---
source: crates/jrsonnet-formatter/src/tests.rs
expression: "reformat(indoc!(\"\n\t\t\t{\n\t\t\t\tshort: aaa(1,2,3,4,5),\n\t\t\t\tlong: bbb(123123123123123123123,12312312321123123123,123123123123312123123,123123123123123123312,123123123123312321123),\n\t\t\t\tshort_in_long: bbb(aaa(1,2,3,4,5), 123123123123123123123,12312312321123123123,123123123123312123123,123123123123123123312,123123123123312321123),\n\t\t\t\tlong_in_short: aaa(1,2,3,4,5,bbb(123123123123123123123,12312312321123123123,123123123123312123123,123123123123123123312,123123123123312321123)),\n\t\t\t}\n\t\t\"))"
---
{
	short: aaa(1, 2, 3, 4, 5),
	long: bbb(
		123123123123123123123,
		12312312321123123123,
		123123123123312123123,
		123123123123123123312,
		123123123123312321123,
	),
	short_in_long: bbb(
		aaa(1, 2, 3, 4, 5),
		123123123123123123123,
		12312312321123123123,
		123123123123312123123,
		123123123123123123312,
		123123123123312321123,
	),
	long_in_short: aaa(
		1,
		2,
		3,
		4,
		5,
		bbb(
			123123123123123123123,
			12312312321123123123,
			123123123123312123123,
			123123123123123123312,
			123123123123312321123,
		),
	),
}
