crates/jrsonnet-formatter/src/snapshots/jrsonnet_formatter__tests__snapshots@asserts.jsonnet.snap
---
source: crates/jrsonnet-formatter/src/tests.rs
expression: reformat(&input)
input_file: crates/jrsonnet-formatter/src/tests/asserts.jsonnet
---
{
   assert 1 > 0: 'one should be greater than zero',
   assert true,
   value: 42,
}
