crates/jrsonnet-formatter/src/snapshots/jrsonnet_formatter__tests__snapshots@basic_object.jsonnet.snap
---
source: crates/jrsonnet-formatter/src/tests.rs
expression: reformat(&input)
input_file: crates/jrsonnet-formatter/src/tests/basic_object.jsonnet
---
{ foo: 'bar', baz: 'qux', nested: { a: 1, b: 2 }, unhidden::: 1 }
