crates/jrsonnet-formatter/src/snapshots/jrsonnet_formatter__tests__snapshots@comments.jsonnet.snap
---
source: crates/jrsonnet-formatter/src/tests.rs
expression: reformat(&input)
input_file: crates/jrsonnet-formatter/src/tests/comments.jsonnet
---
// File header comment
{
   // Comment above field
   foo: 'bar',
   /* Block comment */
   baz: 'qux',
   nested: {
      // Hash comment
      value: 42,
   },
}
