crates/jrsonnet-formatter/src/snapshots/jrsonnet_formatter__tests__snapshots@complex_comments.jsonnet.snap
---
source: crates/jrsonnet-formatter/src/tests.rs
expression: reformat(&input)
input_file: crates/jrsonnet-formatter/src/tests/complex_comments.jsonnet
---
{
   comments: {
      _: '',
      // Plain comment
      a: '',

      # Plain comment with empty line before
      b: '',
      /* Single-line multiline comment */
      c: '',

      /**
       * Single-line multiline doc comment
       */
      c: '',

      /**
       * Multiline doc
       * Comment
       */
      c: '',

      /*
      Multi-line

      comment
      */
      d: '',

      e: '', // Inline comment

      k: '',

      // Text after everything
   },
   comments2: {
      k: '',
      // Text after everything, but no newline above
   },
   spacing: {
      a: '',

      b: '',
   },
   noSpacing: {
      a: '',
      b: '',
   },

   smallObjectWithEnding: {
      /* Ending comment */
   },
   smallObjectWithFieldAndEnding: { a: 11 /* Ending comment */ },
   smallObjectWithFieldAndEnding2: {
      /* Start */
      a: 11, /* Ending comment */
   },
}
