crates/jrsonnet-formatter/src/snapshots/jrsonnet_formatter__tests__snapshots@complex_nested.jsonnet.snap
---
source: crates/jrsonnet-formatter/src/tests.rs
expression: reformat(&input)
input_file: crates/jrsonnet-formatter/src/tests/complex_nested.jsonnet
---
{
   kubernetes: {
      deployment: {
         apiVersion: 'apps/v1',
         kind: 'Deployment',
         metadata: {
            name: 'myapp',
            labels: { app: 'myapp', version: 'v1' },
         },
         spec: {
            replicas: 3,
            selector: { matchLabels: { app: 'myapp' } },
            template: {
               metadata: { labels: { app: 'myapp' } },
               spec: {
                  containers: [
                     {
                        name: 'myapp',
                        image: 'myapp:latest',
                        ports: [
                           { containerPort: 8080 },
                        ],
                        env: [
                           { name: 'FOO', value: 'bar' },
                           {
                              name: 'BAZ',
                              valueFrom: { secretKeyRef: { name: 'mysecret', key: 'password' } },
                           },
                        ],
                     },
                  ],
               },
            },
         },
      },
   },
}
