crates/jrsonnet-formatter/src/snapshots/jrsonnet_formatter__tests__snapshots@comprehensions.jsonnet.snap
---
source: crates/jrsonnet-formatter/src/tests.rs
expression: reformat(&input)
input_file: crates/jrsonnet-formatter/src/tests/comprehensions.jsonnet
---
{
   arr: [x for x in [ 1, 2, 3 ]],
   filtered: [x for x in [ 1, 2, 3, 4, 5 ] if x > 2],
   obj: {
      [k]: v,
      for k in [ 'a', 'b' ]for v in [ 1, 2 ]
   },
}
